--- a/pages/forgot-password.html
+++ b/pages/forgot-password.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/styles.css">
-  <script src="../js/forgot-password.js" defer></script>
+
   <title>Forgot Password</title>
 </head>
 
@@ -25,15 +25,16 @@
         <!-- Login page title -->
         <h2 class="button">NEXOS CREATOR</h2>
       </div>
+      <div class="space"></div>
       <form id="forgotPasswordForm" onsubmit="submitForgotPassword(event)">
-        <h2>Forgot Password</h2>
+        <h2 class="title">FORGOT PASSWORD</h2>
         <div class="input-group">
           <label class="input-label" for="email">EMAIL</label>
           <input class="input-field" type="email" id="email" name="email" required>
         </div>
         <div class="extra">
           <p class="or">OR</p>
-          <p class="back-link"><a href="../pages/login.html">Try to Login</a></p>
+          <p class="link"><a href="./pages/login.html">Try to Login</a></p>
         </div>
         <div class="button-group">
           <button class="button" type="submit">Reset Now!</button>
@@ -46,6 +47,9 @@
 
     </div>
   </div>
+  <!-- External JavaScript file -->
+  <script src="../js/main.js"></script>
+  <script src="../js/forgot-password.js"></script>
 </body>
 
 </html>
