--- a/pages/login.html
+++ b/pages/login.html
@@ -7,8 +7,6 @@
   <title>Login Page</title>
   <!-- External CSS styles -->
   <link rel="stylesheet" href="../css/styles.css">
-  <!-- Google Fonts for additional styling -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron&family=Roboto+Mono&family=Exo+2&family=Electrolize&display=swap">
 </head>
 
 <body>
@@ -32,7 +30,7 @@
       <div class="space"></div>
       <!-- Login form -->
       <form id="loginForm" onsubmit="submitLoginForm(event)">
-        <h2>Login</h2>
+        <h2 class="title">LOGIN</h2>
         <!-- Username input group -->
         <div class="input-group">
           <label for="username" class="input-label">USERNAME</label>
@@ -67,8 +65,7 @@
   </div>
 
   <!-- External JavaScript file -->
-  <script src="../js/main.js"></script>
-  <script src="../js/login.js"></script>
-</body>
+<script src="../js/main.js"></script>
+<script src="../js/login.js"></script></body>
 
 </html>
