--- a/pages/register.html
+++ b/pages/register.html
@@ -6,9 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Register Page</title>
   <!-- External CSS styles -->
-  <link rel="stylesheet" href="../css/styles.css">
-  <!-- Google Fonts for additional styling -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron&family=Roboto+Mono&family=Exo+2&family=Electrolize&display=swap">
+<link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
@@ -32,7 +30,7 @@
       <div class="space"></div>
       <!-- register form -->
       <form id="registrationForm" onsubmit="registerUser()">
-        <h2>Registration</h2>
+        <h2 class="title">REGISTRATION</h2>
         <div class="input-group">
           <label for="email" class="input-label">EMAIL</label>
           <input type="text" id="email" name="email" class="input-field">
@@ -72,7 +70,7 @@
 
   <!-- External JavaScript file -->
   <script src="../js/main.js"></script>
-  <script src="../js/registration.js"></script>
+  <script src="../js/register.js"></script>
 </body>
 
 </html>
